Fixed some spacing issues

--- a/css/style.css
+++ b/css/style.css
@@ -14,22 +14,23 @@ font-family: "Helvetica", sans-serif;
 }
 
 nav{
-	padding-bottom: 0;
-	margin-bottom: 0;
+/*	padding: 0;
+	margin: 0;*/
+	background-color: #333;
+	padding-bottom: .5em;
 }
 
-nav>div{
-	background-color: #333;
-
+nav>div>img{
+	padding-bottom: .5em;
 }
 
 .nav-list li {
-	display: block;
-	float: none;
-	margin-bottom:20px;
-	padding-bottom: 0px;
-	padding-left:20px;
-	padding-top: 20px;
+	/*display: block;*/
+	/*float: none;*/
+	padding-top: .75em;
+	padding-bottom: .75em;
+	padding-left:.75em;
+	padding-top: .5em;
 }
 
 .nav-list>li>a{
@@ -89,6 +90,15 @@ nav>div{
 	width:100%;	
 }
 
+#tour {
+	background-color: #FFFF00;
+}
+
+a:hover{
+	opacity: 0.3;
+}
+
+
 /*.images>a{
 	width: 100%;
 }*/
@@ -101,7 +111,7 @@ img {
 @media(min-width: 960px) {
 	.images {
 		max-width: ;
-		padding: 0 1em;
+		padding: 0 0em;
 		margin: 0 auto;
 	}
 
